chore: code block style

--- a/src/docs/guides/general/advanced/custom-formula.en-US.mdx
+++ b/src/docs/guides/general/advanced/custom-formula.en-US.mdx
@@ -107,10 +107,10 @@ You can create a new `custom-function.ts` file to specifically place custom form
         SheetsUIEnUS,
         UIEnUS,
         DesignEnUS,
-        functionEnUS,
+        functionEnUS
       ),
       [LocaleType.ZH_CN]: Tools.deepMerge(
-        functionZhCN,
+        functionZhCN
       ),
     };
     ```
