--- a/src/docs/guides/general/advanced/custom-formula.zh-CN.mdx
+++ b/src/docs/guides/general/advanced/custom-formula.zh-CN.mdx
@@ -107,10 +107,10 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
         SheetsUIEnUS,
         UIEnUS,
         DesignEnUS,
-        functionEnUS,
+        functionEnUS
       ),
       [LocaleType.ZH_CN]: Tools.deepMerge(
-        functionZhCN,
+        functionZhCN
       ),
     };
     ```
