docs: refine expression

--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -89,7 +89,7 @@ bash uninstall.sh       # 卸载，保留数据下次使用
 bash uninstall.sh clean # 卸载，删除数据
 ```
 
-## 常见问题 <a id="troubleshooting" />
+## 常见问题 <a id="troubleshooting"></a>
 
 ### 服务的运行目录在哪里？
 
