--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -1,6 +1,5 @@
-import { Cards, Card, Steps, Tabs } from 'nextra/components'
+import { Cards, Card, Callout, Steps, Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
-import { Callout } from 'nextra/components'
 
 # Quickstart
 
@@ -64,7 +63,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
       pnpm dev
       ```
       <Callout emoji="⚠️">
-        If you deploy the server on a different machine, you also need to modify the `server` configuration in `vite.config.ts`, changing `localhost` to the server's IP address.
+        If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
       </Callout>
 
       🎉 Congratulations! You've successfully created another Univer project with a server. You can now visit [http://localhost:5173/](http://localhost:5173/) to experience these advanced features.
@@ -79,7 +78,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
       npm run dev
       ```
       <Callout emoji="⚠️">
-        If you deploy the server on a different machine, you also need to modify the `server` configuration in `vite.config.ts`, changing `localhost` to the server's IP address.
+        If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
       </Callout>
 
       🎉 Congratulations! You've successfully created another Univer project with a server. You can now visit [http://localhost:5173/](http://localhost:5173/) to experience these advanced features.
