--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -64,7 +64,7 @@ import { Callout } from 'nextra/components'
       pnpm dev
       ```
       <Callout emoji="⚠️">
-        如果您将服务端部署在其他机器上，还需修改 `vite.config.ts` 中的 `server` 配置项，将 `localhost` 改为服务端的 IP 地址。
+        如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
       </Callout>
 
       🎉 恭喜你，你又成功创建了一个包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验这些进阶的功能。
@@ -78,7 +78,7 @@ import { Callout } from 'nextra/components'
       npm run dev
       ```
       <Callout emoji="⚠️">
-        如果您将服务端部署在其他机器上，还需修改 `vite.config.ts` 中的 `server` 配置项，将 `localhost` 改为服务端的 IP 地址。
+        如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
       </Callout>
             
       🎉 恭喜你，你又成功创建了一个包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验这些进阶的功能。
