docs: remove question mark

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -191,7 +191,7 @@ S3_DEFAULT_BUCKET=univer
 
 2. Start/Restart the service: `bash run.sh`
 
-### Accessing Port 8000 Returns `404 page not found`?
+### Accessing Port 8000 Returns `404 page not found`
 
 Port 8000 is the API port exposed by the Univer Server. Accessing `/` and receiving a `404 page not found` response is expected because there is no API at that path.
 
