--- a/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.zh-CN.mdx
@@ -2,13 +2,13 @@ import { Callout, Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
 
-import entryFile from './hyperlink/demo-1/index.txt'
+import entryFile from './pivot-table/demo.txt'
 
 # 数据透视表
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
-{/* <Sandbox entryFile={entryFile} /> */}
+<Sandbox entryFile={entryFile} />
 
 数据透视表是一种强大的数据分析工具，它能够快速汇总、组织和分析大量数据，从而帮助用户发现数据中的模式和趋势。
 
