--- a/src/docs/guides/sheet/features/import-export.en-US.mdx
+++ b/src/docs/guides/sheet/features/import-export.en-US.mdx
@@ -1,4 +1,4 @@
-import { Tabs } from 'nextra/components'
+import { Callout, Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import BusinessPlanNotice from '@/components/BusinessPlanNotice'
 import ServerNotice from '@/components/ServerNotice'
