docs: add basic concepts chapter

--- a/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
@@ -43,9 +43,10 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 恭喜你！你已经迈出了第一步，开始了解 Univer。接下来，你可以继续深入学习 Univer，这里有一些建议：
 
 - **🔰 安装和引入**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看[安装和引入](/guides/doc/getting-started/installation)章节。它将一步步引导你完成整个过程。
-- **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看[进阶使用](/guides/sheet/getting-started/univer-plugins)章节。它涵盖了更多高级主题和技巧。
+- **🧱 基础概念**：阅读在 Univer 当中会反复出现的[基本概念](/guides/doc/getting-started/concepts)，以更好地使用和深入 Univer 项目。
+- **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看[进阶使用](/guides/doc/getting-started/univer-plugins)章节。它涵盖了更多高级主题和技巧。
 - **📚 教程**：如果你想了解一些实际的例子和真实的用例，可以查看[教程](/zh-cn/guides/tutorials/csv-import-plugin)章节，里面有一些实用的教程，可以帮助你学习如何使用 Univer 构建各种应用和功能。
-- **🧱 概念与架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [概念与架构](/zh-cn/guides/concepts-and-architecture/architecture/) 章节，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
+- **🌌 架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [概念与架构](/zh-cn/guides/concepts-and-architecture/architecture/) 章节，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
 - **🪄 扩展 Univer**：希望扩展和自定义 Univer 以满足你的特定需求？[扩展 Univer](/zh-cn/guides/customization) 章节是你学习如何创建自定义插件、主题和扩展的首选。
 - **🎢 在线演示**： 别忘了探索[在线演示](/playground)页面，在那里你可以尝试各种 Univer 演示，看到这个库的实际运行。
 
