--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -319,9 +319,10 @@ Of course, you may want more than just the basics. If you're looking to add feat
 Congratulations on making it this far! You're well on your way to mastering Univer. Here are some next steps to help you continue your journey:
 
 - **🔰 Installation & Usage**: If you want to learn how to manually set up a Univer project from scratch, check out the [Installation & Usage](/guides/sheet/getting-started/installation) chapter. It will guide you through the process step by step.
+- **🧱 Basic Concepts**: Read the [Basic Concepts](/guides/sheet/getting-started/concepts) chapter to better understand the basic concepts that you'll encounter repeatedly in Univer projects.
 - **🏗️ Advanced Usage**: Ready to take your Univer skills to the next level? The [Advanced Usage](/guides/sheet/advanced/custom-canvas) chapter covers more advanced topics and techniques for working with Univer.
 - **📚 Tutorials**: Looking for practical examples and real-world use cases? Head over to the [Tutorials](/guides/sheet/tutorials/csv-import-plugin) chapter, where you'll find a collection of hands-on tutorials that demonstrate how to build various applications and features with Univer.
-- **🧱 Concepts & Architecture**: Want to dive deep into the inner workings of Univer? The [Architecture](/guides/sheet/architecture/univer) chapter provides a comprehensive overview of Univer's architecture, core concepts, and design principles.
+- **🌌 Architecture**: Want to dive deep into the inner workings of Univer? The [Architecture](/guides/sheet/architecture/univer) chapter provides a comprehensive overview of Univer's architecture, core concepts, and design principles.
 - **🎢 Playground**: Don't forget to explore the [Playground page](/playground), where you can experiment with various Univer demos and see the library in action.
 
 No matter which path you choose, Univer is here to support you every step of the way. Happy coding!
